--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   <p class="mb-4">
                     Pasithea Villa, where luxury meets tranquility on the pristine shores of Labayat,Real Quezon. Experience the perfect blend of elegance and relaxation in our stylish rooms, enjoy our infinity pool and private beach, savor delectable cuisine at our fine dining restaurant, and rejuvenate at Pasithea Spa.</p>
                   <p class="mb-0">
-                  Your unforgettable escape begins here at Pasithea Hotel. </p>
+                  Your unforgettable escape begins here at Pasithea Villa. </p>
                 </div>
                 <div class="intro-right">
                   <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1" style=" width: 300px; height: 200px;">
